--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,10 @@
 .header-open{
   padding-bottom: 80px;
 }
+.carousel-inner img{
+	width: 100%;
+	height: 400px !important;
+}
+.carousel-inner .first-caption{
+	color: #54575c;
+}
