--- a/partials/home.html
+++ b/partials/home.html
@@ -1,1 +1,37 @@
-<h1>home</h1>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/banner3.jpg" class="first-banner" alt="...">
+      <div class="carousel-caption">
+        <h2 class="text-right first-caption">Abhyuday S N Samaj kalyan Trust</h2>
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/banner2.png" alt="...">
+      <div class="carousel-caption">
+        <h2>Abhyuday S N Samaj kalyan Trust</h2>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" data-target="#carousel-example-generic" role="button" data-slide="prev">
+    
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" data-target="#carousel-example-generic" role="button" data-slide="next">
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<script>
+  $('.carousel').carousel({
+    interval: 3000
+  })
+</script>
