Added about us section

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+	font-size: 13px;
+}
 .navbar-custom-color{
   background-color: rgba(66,73,79,0.94);
   border-color: rgba(66,73,79,0.94);
@@ -25,4 +28,7 @@
 }
 .carousel-inner .first-caption{
 	color: #54575c;
+}
+.section-spaces{
+	padding: 60px 0;
 }
