--- a/partials/home.html
+++ b/partials/home.html
@@ -30,6 +30,21 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<section class="section-spaces">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+      <h3>Abhyuday S N Samaj kalyan Trust</h3>
+      <p>A trust that commits to impart quality education has funded Abhyuday S N Samaj kalyan Trust. World-class engineering education can never come of its own but through consistent efforts and reclassified targets. It becomes utmost important to impart standard education to the students so that they can face today’s competitive and complex environment confidently. The students are developed to equip themselves with analytical and decisive skills so as to make the life a success.
+      <br>
+      Beyond curriculum, there will be a ceaseless endeavor of Abhyuday S N Samaj kalyan Trust to impart knowledge in synchronization with market trends.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="images/about-img.jpg" class="img-responsive">
+      </div>
+    </div>
+  </div>
+</section>
 <script>
   $('.carousel').carousel({
     interval: 3000
