--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-	font-size: 13px;
+  font-size: 13px;
 }
 .navbar-custom-color{
   background-color: rgba(66,73,79,0.94);
@@ -23,12 +23,41 @@
   padding-bottom: 80px;
 }
 .carousel-inner img{
-	width: 100%;
-	height: 400px !important;
+  width: 100%;
+  height: 400px !important;
 }
 .carousel-inner .first-caption{
-	color: #54575c;
+  color: #54575c;
 }
 .section-spaces{
-	padding: 60px 0;
+  padding: 60px 0;
+}
+.footer-bottom {
+  float: left;
+  width: 100%;
+  padding-bottom: 24px;
+  padding-top: 28px;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #171616;
+  background: none repeat scroll 0 0 #323131;
+}
+.footer-bottom p {
+    color: #969595;
+    float: left;
+    font-family: roboto;
+    font-size: 12px;
+    line-height: 14px;
+    margin: 0;
+}
+.footer-bottom ul {
+    float: right;
+}
+.footer-bottom li {
+    float: left;
+    margin-left: 35px;
+}
+.footer-bottom a {
+    color: #969595;
+    font-family: roboto;
+    font-size: 12px;
 }
