--- a/partials/home.html
+++ b/partials/home.html
@@ -8,15 +8,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="images/banner3.jpg" class="first-banner" alt="...">
+      <img src="images/banner3.jpg" class="first-banner" alt="Abhyuday S N Samaj kalyan Trust">
       <div class="carousel-caption">
-        <h2 class="text-right first-caption">Abhyuday S N Samaj kalyan Trust</h2>
+        <h2 class="text-right first-caption uppercase">Abhyuday S N Samaj kalyan Trust</h2>
       </div>
     </div>
     <div class="item">
-      <img src="images/banner2.png" alt="...">
+      <img src="images/banner2.png" alt="Abhyuday S N Samaj kalyan Trust">
       <div class="carousel-caption">
-        <h2>Abhyuday S N Samaj kalyan Trust</h2>
+        <h2 class="uppercase">Abhyuday S N Samaj kalyan Trust</h2>
       </div>
     </div>
   </div>
@@ -45,30 +45,3 @@
     </div>
   </div>
 </section>
-<div class="footer-bottom">
-  <div class="container">
-    <p>Copyright © 2015 Abhyuday S N Samaj kalyan Trust </p> 
-    <ul>      
-      <li><a href="/" title="">HOME</a></li>
-      <li><a href="/#about-us" title="">ABOUT</a></li>
-<!--      <li><a href="elements.html" title="">ELEMENTS</a></li> 
-      <li><a href="/lifeline/HTML/get-involved/blog.php" title="">BLOG</a></li>-->
-      <li><a href="#" title="">EVENTS</a></li>
-      <li><a href="#" title="">CONTACT</a></li>
-    </ul> 
-  </div>
-  <div>
-  <table width="100%" border="1">
-    <tbody><tr>
-      <td align="center">
-        <font color="text-white"> Affiliated to Abhyuday S N Samaj kalyan Trust </font>
-      </td>
-    </tr>
-  </tbody></table>
-  </div>
-</div>
-<script>
-  $('.carousel').carousel({
-    interval: 3000
-  })
-</script>
