--- a/templates/header.html
+++ b/templates/header.html
@@ -9,13 +9,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand text-white" href="#/"><i class="fa fa-book brand-icon"></i> ASNSKT</a>
+          <a class="navbar-brand" href="#/">
+            <img src="images/logo.jpg" alt="asnskt" class="logo">
+          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right right-menu">
             <li><a href="#/about">About</a></li>
             <li><a href="#/contact">Contact Us</a></li>
             
